#5013 - Ability to style HTML documents to be like chats
- Ability to filter attributes based on attribute name patterns (e.g. assign a policy to all attributes matching `data-.*`)
- Added CSS classes for chat styling that can be used in the Apache Annotator HTML editor